--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import Footer from "../components/Footer.astro";
 import Head from "../components/head/Head.astro";
 import Header from "../components/head/Header.astro";
 import { getLangFromUrl } from "../i18n/utils";
+import  SpeedInsights  from "@vercel/speed-insights/astro"
 
 const lang = getLangFromUrl(Astro.url);
 const { title = "VRATSKYI" } = Astro.props;
@@ -13,6 +14,8 @@ const { title = "VRATSKYI" } = Astro.props;
   <Head title={title} />
   <body class="mx-auto min-w-full cursor-default prose subpixel-antialiased">
     <Header />
+    <!-- Vercel Speed Insights -->
+    <SpeedInsights/>
     <div
       id="loader"
       class="h-svh w-svw mx-auto z-[9999] fixed top-0 bottom-0 left-0 right-0 overflow-hidden bg-base-300"
@@ -23,6 +26,7 @@ const { title = "VRATSKYI" } = Astro.props;
     </div>
     <slot />
     <Footer />
+    <!-- Прелоадер -->
     <script type="text/javascript" is:inline>
       const loader = document.getElementById("loader");
       const body = document.body;
@@ -34,6 +38,7 @@ const { title = "VRATSKYI" } = Astro.props;
         });
       }
     </script>
+    <!-- Анимация -->
     <script type="text/javascript" is:inline>
       document.addEventListener("DOMContentLoaded", () => {
         function animate() {
