--- a/src/pages/ru/404.astro
+++ b/src/pages/ru/404.astro
@@ -11,7 +11,7 @@ const t = useTranslations(lang);
     <div class="mx-auto w-full max-w-[800px] my-[80px]">
         <div class="h-svh grid place-content-center place-items-center text-center">
             <span class="text-8xl font-black bg-clip-text text-transparent bg-gradient-to-r from-secondary to-primary">404</span>
-            <h2 class="text-4xl font-normal">{t('error.404')}</h2>
+            <h2 class="text-4xl font-normal">Упс, я думаю, Вы не хотели попасть сюда.</h2>
         </div>
     </div>
     
