--- a/src/components/head/Head.astro
+++ b/src/components/head/Head.astro
@@ -16,33 +16,43 @@ const { title } = Astro.props;
     <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="preload" href="/styles/reset.css" as="style" onload="this.onload=null; this.rel='stylesheet';">
     <link rel="preload" href="/styles/global.css" as="style" onload="this.onload=null; this.rel='stylesheet';">	
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <title>{title}</title>
     
-    <!-- Open Graph для соціальних мереж -->
+    <!-- Open Graph для социальных сетей на украинском -->
     <meta property="og:type" content="website">
     <meta property="og:locale" content="uk_UA">
-    <meta property="og:site_name" content="">
-    <meta property="og:url" content="">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="">
-    <meta property="og:image:alt" content="">
-    <meta property="og:image:width" content="200">
-    <meta property="og:image:height" content="100">
-    
+    <meta property="og:site_name" content="VRATSKYI">
+    <meta property="og:url" content="https://vratsky.vercel.app/ua/">
+    <meta property="og:title" content="VRATSKYI - Олексій Врацький">
+    <meta property="og:description" content="Я створюю сучасні та адаптивні веб-сайти, які допоможуть вашому бізнесу виділитися в Інтернеті.">
+    <meta property="og:image" content="https://vratsky.vercel.app/vratskyi-og-xl-ua.png">
+    <meta property="og:image:alt" content="VRATSKYI Logo">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
     <!-- Open Graph для социальных сетей на русском -->
     <meta property="og:locale:alternate" content="ru_RU">
-    <meta property="og:title:alternate" content="">
-    <meta property="og:description:alternate" content="">
-    <meta property="og:image:alternate" content="">
-    <meta property="og:image:alt:alternate" content="">
-    <meta property="og:image:width:alternate" content="200">
-    <meta property="og:image:height:alternate" content="100">
-    
+    <meta property="og:title:alternate" content="VRATSKYI - Олексій Врацький">
+    <meta property="og:description:alternate" content="Я создаю современные и адаптивные веб-сайты, которые помогут вашему бизнесу выделиться в Интернете.">
+    <meta property="og:image:alternate" content="https://vratsky.vercel.app/vratskyi-og-xl-ru.png">
+    <meta property="og:image:alt:alternate" content="Логотип VRATSKYI">
+    <meta property="og:image:width:alternate" content="1200">
+    <meta property="og:image:height:alternate" content="630">
+
+    <!-- Open Graph для социальных сетей на английском -->
+    <meta property="og:locale:alternate" content="en_US">
+    <meta property="og:title:alternate" content="VRATSKYI - Oleksii Vratskyi">
+    <meta property="og:description:alternate" content="I create modern and responsive websites that will help your business stand out online.">
+    <meta property="og:image:alternate" content="https://vratsky.vercel.app/vratskyi-og-xl-en.png">
+    <meta property="og:image:alt:alternate" content="VRATSKYI Logo">
+    <meta property="og:image:width:alternate" content="1200">
+    <meta property="og:image:height:alternate" content="630">
+
     <!-- метатеги для SEO -->
-    <meta name="author" content="">
-    <meta name="description" content="" />
-    <meta name="keywords" content="">
+    <meta name="author" content="Oleksii Vratskyi">
+    <meta name="description" content="Oleksii Vratskyi - досвідчений фрілансер-розробник, що створює веб-сайти для різних галузей більше 5 років.">
+    <meta name="keywords" content="VRATSKYI, Front-End Developer, замовити сайт, веб-розробка, фріланс, розробка під замовлення, оптимізація сайтів, SEO, портфоліо, лендинги, інтернет-магазини, блоги, веб-прикладання">
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
 
