--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -8,5 +8,5 @@ const t = useTranslations(lang);
 ---
 
 <div class="navbar-center">
-    <a href={`/${lang}/`} class="btn btn-ghost w-32 not-prose"><Image id="logo" src={logo} alt="Замовити розробку сайту в Україні" format="avif" /></a>
+    <a href={`/${lang}/`} class="btn btn-ghost w-[120px] not-prose"><Image id="logo" src={logo} alt="Замовити розробку сайту в Україні" format="avif" width='82' height='11' loading="eager" /></a>
 </div>
