--- a/src/components/buttons/MenuButton.astro
+++ b/src/components/buttons/MenuButton.astro
@@ -1,10 +1,15 @@
 ---
 import Nav from "../head/Nav.astro";
+
+import { getLangFromUrl, useTranslations } from '../../i18n/utils';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <div class="drawer z-50">
     <input id="my-drawer" type="checkbox" class="drawer-toggle" />
-    <div class="drawer-content">
+    <div class="drawer-content" title={t('menu.title')}>
       <label for="my-drawer" class="btn btn-circle swap swap-rotate stroke-current hover:text-primary duration-150">
         <input type="checkbox" />
         <svg class="swap-off fill-current" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 512 512"><path d="M64,384H448V341.33H64Zm0-106.67H448V234.67H64ZM64,128v42.67H448V128Z"/></svg>
