--- a/src/pages/en/portfolio/h2ovodaold.astro
+++ b/src/pages/en/portfolio/h2ovodaold.astro
@@ -11,7 +11,7 @@ const t = useTranslations(lang);
 <Layout title='VRATSKYI - h2ovoda'>
 
       
-    <div class="h-full mb-[400px]">
+    <div class="h-full mb-[400px] md:mb-0">
           <div class="grid place-content-start place-self-start mt-[80px] w-full max-w-[1280px] mx-auto">
               <div class="text-sm breadcrumbs">
                   <ul>
