--- a/src/components/MyGithub.astro
+++ b/src/components/MyGithub.astro
@@ -35,7 +35,7 @@ const t = useTranslations(lang);
                     <h2 class="text-6xl my-auto font-black animate">
                         {t('mygithub.title')}
                     </h2>
-                    <a class="btn btn-active btn-sm btn-primary place-self-start pt-1" href="https://github.com/vratskyi" target="_blank">
+                    <a class="btn btn-active btn-sm btn-primary place-self-start pt-1" href="https://github.com/vratskyi" target="_blank" rel="noreferrer">
                         {t('mygithub.button')}
                     </a>
                 </div>
