--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,9 +1,9 @@
 <div class="grid grid-flow-col place-content-center place-items-center place-self-center space-x-5 px-5 py-3">
-    <a href="https://github.com/vratskyi" target="_blank" aria-label="My Github">
+    <a href="https://github.com/vratskyi" target="_blank" rel="noreferrer" aria-label="My Github">
         <svg  class="inline-block w-8 h-8 hover:text-primary duration-150" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 1024 1024"><path fill="currentColor" d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5C64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9c26.4 39.1 77.9 32.5 104 26c5.7-23.5 17.9-44.5 34.7-60.8c-140.6-25.2-199.2-111-199.2-213c0-49.5 16.3-95 48.3-131.7c-20.4-60.5 1.9-112.3 4.9-120c58.1-5.2 118.5 41.6 123.2 45.3c33-8.9 70.7-13.6 112.9-13.6c42.4 0 80.2 4.9 113.5 13.9c11.3-8.6 67.3-48.8 121.3-43.9c2.9 7.7 24.7 58.3 5.5 118c32.4 36.8 48.9 82.7 48.9 132.3c0 102.2-59 188.1-200 212.9a127.5 127.5 0 0 1 38.1 91v112.5c.8 9 0 17.9 15 17.9c177.1-59.7 304.6-227 304.6-424.1c0-247.2-200.4-447.3-447.5-447.3" /></svg>
     </a>   
     
-    <a href="https://www.behance.net/alexvracky" target="_blank" aria-label="My Behance">
+    <a href="https://www.behance.net/alexvracky" target="_blank" rel="noreferrer" aria-label="My Behance">
         <svg  class="inline-block w-8 h-8 hover:text-primary duration-150" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
             <path fill="currentColor" fill-rule="evenodd" d="M10.187 11.362a3.243 3.243 0 0 0 1.343-1.108a3.15 3.15 0 0 0 .451-1.751a3.813 3.813 0 0 0-.304-1.64a2.634 2.634 0 0 0-.86-1.109c-.4-.29-.855-.487-1.333-.576A7.504 7.504 0 0 0 7.764 5H1.8a.3.3 0 0 0-.3.3v13.341a.3.3 0 0 0 .3.3h6.1c.584 0 1.166-.078 1.73-.233a4.658 4.658 0 0 0 1.501-.72a3.42 3.42 0 0 0 1.05-1.263a3.956 3.956 0 0 0 .388-1.829a4.006 4.006 0 0 0-.599-2.216a3.148 3.148 0 0 0-1.836-1.32zM4.55 7.25a.2.2 0 0 0-.2.2v3.1c0 .11.09.2.2.2h2.8a1.75 1.75 0 0 0 0-3.5zm-.2 5.45c0-.11.09-.2.2-.2h2.925a2.125 2.125 0 0 1 0 4.25H4.55a.2.2 0 0 1-.2-.2z" clip-rule="evenodd" />
             <path fill="currentColor" d="M15.439 5.71h4.723a.3.3 0 0 1 .3.296l.013.962a.3.3 0 0 1-.3.304h-4.736a.3.3 0 0 1-.3-.3V6.01a.3.3 0 0 1 .3-.3" />
@@ -11,7 +11,7 @@
         </svg>
     </a>   
 
-    <a href="https://t.me/dev_it_dude" target="_blank" aria-label="My Telegram">
+    <a href="https://t.me/dev_it_dude" target="_blank" rel="noreferrer" aria-label="My Telegram">
         <svg  class="inline-block w-8 h-8 hover:text-primary duration-150" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 48 48">
             <path fill="currentColor" d="M41.42 7.309s3.885-1.515 3.56 2.164c-.107 1.515-1.078 6.818-1.834 12.553l-2.59 16.99s-.216 2.489-2.159 2.922c-1.942.432-4.856-1.515-5.396-1.948c-.432-.325-8.094-5.195-10.792-7.575c-.756-.65-1.62-1.948.108-3.463L33.649 18.13c1.295-1.3 2.59-4.33-2.806-.65l-15.11 10.28s-1.727 1.083-4.964.109l-7.016-2.165s-2.59-1.623 1.835-3.246c10.793-5.086 24.068-10.28 35.831-15.15" />
         </svg>
