--- a/src/components/head/Head.astro
+++ b/src/components/head/Head.astro
@@ -56,4 +56,13 @@ const { title } = Astro.props;
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JY9LE7FG3L"></script>
+    <script type="text/javascript" is:inline>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-JY9LE7FG3L');
+    </script>
   </head>
