--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,7 @@ const t = useTranslations(lang);
       <a class="link link-hover hover:text-primary duration-150" href={`/${lang}/contact`}>{t('nav.contact')}</a>
     </nav>
     <div>
-      <a class="btn btn-sm btn-outline btn-primary" href="https://donatello.to/vratskyi" target="_blank">{t('footer.donate')}
+      <a class="btn btn-sm btn-outline btn-primary" href="https://donatello.to/vratskyi" target="_blank" rel="noreferrer">{t('footer.donate')}
         <svg class="w-6 h-6 inline-block ml-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
           <path fill="currentColor" d="M2.5 0a.5.5 0 0 1 .5.5c0 .47.274.706.8 1.1l.04.03C4.314 1.985 5 2.498 5 3.5a.5.5 0 0 1-1 0c0-.47-.274-.706-.8-1.1l-.04-.03C2.686 2.015 2 1.502 2 .5a.5.5 0 0 1 .5-.5m3 0a.5.5 0 0 1 .5.5c0 .47.274.706.8 1.1l.04.03C7.314 1.985 8 2.498 8 3.5a.5.5 0 0 1-1 0c0-.47-.274-.706-.8-1.1l-.04-.03C5.686 2.015 5 1.502 5 .5a.5.5 0 0 1 .5-.5M9 .5a.5.5 0 0 0-1 0c0 1.002.686 1.515 1.16 1.87l.04.03c.526.394.8.63.8 1.1a.5.5 0 0 0 1 0c0-1.002-.686-1.515-1.16-1.87L9.8 1.6C9.274 1.206 9 .97 9 .5M13 6h.5a2.5 2.5 0 0 1 0 5h-.707A5.5 5.5 0 0 1 2 9.5V5.891C2 5.4 2.399 5 2.891 5h9.218c.492 0 .891.399.891.891zM3 6v3.5a4.5 4.5 0 1 0 9 0V6zm10 1v2.5c0 .169-.008.335-.022.5h.522a1.5 1.5 0 0 0 0-3z" />
         </svg>
