--- a/src/components/PortfolioCard.astro
+++ b/src/components/PortfolioCard.astro
@@ -47,7 +47,7 @@ const { image, title, description, label, activeButton, exturnalButton  } = Astr
                 </a>
             )} 
             {exturnalButton && (
-                <a class="btn btn-sm btn-outline" target="_blank" href={exturnalButton.link || ''}>
+                <a class="btn btn-sm btn-outline" target="_blank" rel="noreferrer" href={exturnalButton.link || ''}>
                     {exturnalButton.title || ''}
                     <svg class="inline-block w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
                     <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M21 3h-6.75M21 3v6.75M21 3l-8.25 8.25M9.4 3c-2.24 0-3.36 0-4.216.436a4 4 0 0 0-1.748 1.748C3 6.04 3 7.16 3 9.4v5.2c0 2.24 0 3.36.436 4.216a4 4 0 0 0 1.748 1.748C6.04 21 7.16 21 9.4 21h5.2c2.24 0 3.36 0 4.216-.436a4 4 0 0 0 1.748-1.748C21 17.96 21 16.84 21 14.6v-1.1" />
