--- a/src/pages/en/portfolio/h2ovodaold.astro
+++ b/src/pages/en/portfolio/h2ovodaold.astro
@@ -136,7 +136,7 @@ const t = useTranslations(lang);
             <div class="order-first lg:order-last max-w-[320px] lg:max-w-full mx-auto not-prose not-prose">
                 <div class="mockup-browser bg-base-300">
                     <div class="mockup-browser-toolbar">
-                      <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://old.h2ovoda.com.ua/" target="_blank">https://old.h2ovoda.com.ua/</a></div>
+                      <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://old.h2ovoda.com.ua/" target="_blank" rel="noreferrer">https://old.h2ovoda.com.ua/</a></div>
                     </div>
                     <div class="flex justify-center bg-base-200">
                         <Image src={h2ovodaOld} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" alt='Сайт доставки воды 1.0' format='avif' width='600' height='400' />
