--- a/src/pages/ru/portfolio/index.astro
+++ b/src/pages/ru/portfolio/index.astro
@@ -114,7 +114,7 @@ const t = useTranslations(lang);
             <div class="order-first lg:order-last max-w-[320px] lg:max-w-full mx-auto not-prose">
                 <div class="mockup-browser bg-base-300">
                     <div class="mockup-browser-toolbar">
-                      <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://h2ovoda.com.ua" target="_blank">https://h2ovoda.com.ua</a></div>
+                      <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://h2ovoda.com.ua" target="_blank" rel="noreferrer">https://h2ovoda.com.ua</a></div>
                     </div>
                     <div class="flex justify-center bg-base-200">
                         <Image src={h2ovoda} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" alt='H2O Вода' width='600' height='400' />
