--- a/src/pages/ua/portfolio/byshikat.astro
+++ b/src/pages/ua/portfolio/byshikat.astro
@@ -131,7 +131,7 @@ const t = useTranslations(lang);
             <div class="order-first lg:order-last max-w-[320px] lg:max-w-full mx-auto not-prose not-prose">
                 <div class="mockup-browser bg-base-300">
                     <div class="mockup-browser-toolbar">
-                      <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://byshikat.com/" target="_blank">https://byshikat.com/</a></div>
+                      <div class="input"><a class="hover:text-primary duration-150 not-prose text-sm" href="https://byshikat.com/" target="_blank" rel="noreferrer">https://byshikat.com/</a></div>
                     </div>
                     <div class="flex justify-center bg-base-200">
                         <Image src={byshikat} class="max-w-[600px] max-h-[400px] w-full h-full object-cover object-center" format='avif' alt='Byshikat интернет-магазин обуви' width='600' height='400' />
