--- a/src/pages/ru/about/index.astro
+++ b/src/pages/ru/about/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../../../layouts/Layout.astro'
 import { getLangFromUrl, useTranslations } from "../../../i18n/utils";
 import About from '../../../components/About.astro';
+import MyGithub from '../../../components/MyGithub.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -11,6 +12,8 @@ const t = useTranslations(lang);
 
     <div class="mx-auto w-full max-w-[1024px] my-[80px]">
         <About />
+        <MyGithub />
+
     </div>
     
 </Layout>
