--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from 'astro:assets'
 import Stats from './AuthorStats.astro'
-import author from '../images/oleksii-vratskyi.jpg'
+import author from '../images/oleksii-vratskyi.png'
 import { getLangFromUrl, useTranslations } from '../i18n/utils';
 
 const lang = getLangFromUrl(Astro.url);
