--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -41,7 +41,7 @@ const t = useTranslations(lang);
       </div>
 
       <div class="order-first lg:order-last">
-        <Image src={author} alt="Oleksii Vratskyi" format='avif' width='200' height='200' loading='eager' class='rounded-full ring-[6px] ring-primary ring-offset-base-100 ring-offset-2 shadow-xl shadow-secondary/10 size-[200px] !z-0' />
+        <Image src={author} alt="Oleksii Vratskyi" format='webp' width='200' height='200' class='rounded-full ring-[6px] ring-primary ring-offset-base-100 ring-offset-2 shadow-xl shadow-secondary/10 size-[200px]' />
       </div>
 
     </div>
