--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from 'astro:assets'
+import { Picture } from 'astro:assets'
 import Stats from './AuthorStats.astro'
 import author from '../images/oleksii-vratskyi.png'
 import { getLangFromUrl, useTranslations } from '../i18n/utils';
@@ -16,8 +16,12 @@ const t = useTranslations(lang);
     <div class="aspect-[1097/845] w-[48.5625rem] bg-gradient-to-tr from-[#ff4694] to-[#776fff] opacity-60" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
   </div>
 
-  <div class="grid not-prose p-3 lg:p-0">
-    <div class="grid lg:grid-flow-col gap-y-20 lg:gap-y-0 place-content-between place-items-center">
+  <div class="grid lg:grid-flow-col not-prose p-3 lg:p-0">
+    <div class="order-first lg:order-last place-self-center">
+      <Picture src={author} alt="Oleksii Vratskyi" loading='eager' formats={['avif', 'webp']} width='200' height='200' class='object-cover object-center rounded-full ring-[6px] ring-primary ring-offset-base-100 ring-offset-2 shadow-xl shadow-secondary/10 size-[200px]' />
+    </div>
+    
+    <div class="grid lg:grid-flow-col gap-y-20 lg:gap-y-0 place-content-between place-items-center mt-10 lg:mt-0">
       <div>
 
         <div class="grid gap-y-5 lg:gap-y-0">
@@ -40,9 +44,6 @@ const t = useTranslations(lang);
         </div>
       </div>
 
-      <div class="order-first lg:order-last">
-        <Image src={author} alt="Oleksii Vratskyi" format='webp' width='200' height='200' class='rounded-full ring-[6px] ring-primary ring-offset-base-100 ring-offset-2 shadow-xl shadow-secondary/10 size-[200px]' />
-      </div>
 
     </div>
   </div>
