--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,6 +19,7 @@ const t = useTranslations(lang);
   <div class="grid lg:grid-flow-col not-prose p-3 lg:p-0">
     <div class="order-first lg:order-last place-self-center">
       <Picture 
+      id='heroPicture'
       src={author} 
       alt="Oleksii Vratskyi" 
       loading='eager' 
@@ -27,8 +28,16 @@ const t = useTranslations(lang);
       formats={['avif', 'webp']} 
       width='200' 
       height='200' 
-      class='object-cover object-center rounded-full ring-[6px] ring-primary ring-offset-base-100 ring-offset-2 shadow-xl shadow-secondary/10' 
+      class='hidden object-cover object-center rounded-full ring-[6px] ring-primary ring-offset-base-100 ring-offset-2 shadow-xl shadow-secondary/10' 
       />
+      <script type="text/javascript" is:inline>
+      const heroPicture = document.getElementById('heroPicture');
+      
+      window.addEventListener('load', () =>  {
+        heroPicture.classList.remove('hidden');
+      })
+
+      </script>
     </div>
     
     <div class="grid lg:grid-flow-col gap-y-20 lg:gap-y-0 place-content-between place-items-center mt-10 lg:mt-0">
