--- a/src/components/head/Head.astro
+++ b/src/components/head/Head.astro
@@ -57,8 +57,8 @@ const { title } = Astro.props;
     <meta name="googlebot" content="index,follow">
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JY9LE7FG3L"></script>
-    <script type="text/javascript" is:inline>
+    <script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-JY9LE7FG3L"></script>
+    <script type="text/partytown" is:inline>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
