--- a/src/pages/en/services/index.astro
+++ b/src/pages/en/services/index.astro
@@ -4,6 +4,7 @@ import Layout from '../../../layouts/Layout.astro'
 import services from '../../../images/services.png'
 
 import { getLangFromUrl, useTranslations } from "../../../i18n/utils";
+import ServiceCTA from '../../../components/ServiceCTA.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -44,6 +45,8 @@ const t = useTranslations(lang);
       </div>
     
     </section>
+    
+    <ServiceCTA />
 
     <div class="mx-auto not-prose mt-40 p-2 lg:mt-0 lg:h-svh text-center grid place-content-center place-items-center">
       <div class="relative isolate">
@@ -60,6 +63,8 @@ const t = useTranslations(lang);
         {t('service.screen.2.description')}
       </p>
     </div>
+
+
 
     <div class="py-24 sm:py-32 mt-40 p-2 lg:mt-0 lg:h-svh grid place-content-center place-items-center">
       <div class="mx-auto max-w-7xl px-6 lg:px-8">
