--- a/src/pages/ru/services/index.astro
+++ b/src/pages/ru/services/index.astro
@@ -2,6 +2,8 @@
 import { Picture } from 'astro:assets'
 import Layout from '../../../layouts/Layout.astro'
 import services from '../../../images/services.png'
+import ServiceCTA from '../../../components/ServiceCTA.astro';
+
 
 import { getLangFromUrl, useTranslations } from "../../../i18n/utils";
 
@@ -44,6 +46,8 @@ const t = useTranslations(lang);
       </div>
     
     </section>
+
+    <ServiceCTA />
 
     <div class="mx-auto not-prose mt-40 p-2 lg:mt-0 lg:h-svh text-center grid place-content-center place-items-center">
       <div class="relative isolate">
