--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,6 +13,7 @@ const t = useTranslations(lang);
       <a href={`/${lang}/services`} class="link link-hover hover:text-primary duration-150">{t('nav.services')}</a>
       <a href={`/${lang}/about`} class="grid grid-flow-col place-content-stretch hover:text-primary duration-150">{t('nav.about')}</a>
       <a class="link link-hover hover:text-primary duration-150" href={`/${lang}/contact`}>{t('nav.contact')}</a>
+      <a class="link link-hover hover:text-primary duration-150" href={`/${lang}/affiliate`}>{t('nav.affiliate')}</a>
     </nav>
     <div>
       <a class="btn btn-sm btn-outline btn-primary" href="https://donatello.to/vratskyi" target="_blank" rel="noreferrer">{t('footer.donate')}
