--- a/src/components/ServiceCTA.astro
+++ b/src/components/ServiceCTA.astro
@@ -9,7 +9,7 @@ const t = useTranslations(lang);
   <div
     class="grid lg:grid-flow-col place-content-center lg:place-content-between place-items-center w-full"
   >
-    <div class="text-left p-5 md:p-10 max-w-xl rounded-box bg-base-300 animate">
+    <div class="text-left p-5 md:p-10 max-w-xl animate">
       <div class="mt-6 text-lg leading-8 grid gap-y-3">
           <p>
               {t('service.screen.video.paragraph.1')}
