--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const { title = "VRATSKYI" } = Astro.props;
 ---
 
 <!doctype html>
-<html lang={lang} data-theme="codeForgeBlack">
+<html lang={lang} data-theme="codeForgeBlack" class="scroll-smooth">
   <Head title={title} />
   <body class="mx-auto min-w-full cursor-default prose subpixel-antialiased">
     <Header />
